--- a/US_Accidents.ipynb
+++ b/US_Accidents.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6yYYynxXGC1wpe/3/Qebs"
+      "authorship_tag": "ABX9TyNqsGG714sPyvzyERkdIPGc"
     },
     "kernelspec": {
       "name": "python3",
@@ -1823,6 +1823,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary and Conclusion Insights:\n",
+        "\n",
+        "  - No data from New York\n",
+        "  - The number of accidents per city decreases exponentially\n",
+        "  - Less than 5% of cities have more than 1000 yearly accidents.\n",
+        "  - Over 1200 cities have reported just one accident (need to investigate)"
+      ],
+      "metadata": {
+        "id": "XzPXHDIcLhpn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_hTc6T5cLg1-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "import folium"
@@ -2026,6 +2049,15 @@
       "metadata": {
         "id": "OfLLr2lSKLE9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8_Wl6UqBLemH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
